# rust-leptos-template

./: Cargo.toml  README.md
src/: app.rs  lib.rs  libs.rs  main.rs
src/app/: mod.rs
src/components/: button.rs  counter.rs  footer.rs  mod.rs  modal.rs  navbar.rs
src/components/form/: forminput.rs  mod.rs  select.rs
src/pages/: about.rs  home.rs  mod.rs
style/: main.css
