[package]
name = "rust-leptos-template"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.6", features = ["csr", "ssr"] }
leptos_router = "0.6"
leptos_meta = "0.6"
leptos_axum = "0.6"

axum = "0.7"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.29"
axum-server = "0.8.0"
